# rewind

./: .gitignore  README.md
.claude/: launch.json
.github/workflows/: ci.yml
docs/: DETERMINISM.md
server/: README.md  pyproject.toml
server/demo_agent/: __init__.py  book_flight.py  flight_agent.py
server/rewind/: __init__.py  agent.py  app.py  driver.py  fingerprint.py  models.py  replay.py  store.py  upstream.py
server/tests/: test_integration.py  test_replay.py  test_store.py  test_upstream.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  api.js  styles.css
web/src/components/: Inspector.jsx  Timeline.jsx
web/src/lib/: events.js
